# sbe-code-gen

./: .clang-format  .gitignore  CMakeLists.txt  README.md  requirements.txt
.github/workflows/: on_push.yml
app/: __main__.py  common.py  generator.py  generator_cpp.py  parser.py  schema.py  xml.py
app/cpp/: composite.tmpl  composite_impl.tmpl  data.tmpl  document.tmpl  enum.tmpl  enum_impl.tmpl  field.tmpl  group.tmpl  impl_base.tmpl  message.tmpl  message_impl.tmpl  method.tmpl  schema.tmpl  set_impl.tmpl
app/generation/: __init__.py
app/generation/cpp/: generator.py
app/generation/cpp-all-features/: generator.py
app/generation/cpp-all-features/templates/: generate.tmpl  schema.tmpl
app/generation/cpp-min/: generator.py
app/generation/cpp-min/templates/: generate.tmpl  schema.tmpl
app/generation/cpp-x/: __init__.py  generator.py
app/generation/cpp-x/templates/: common.tmpl  composite.tmpl  document.tmpl  enum.tmpl  generate.tmpl  group.tmpl  message.tmpl  property.tmpl  set.tmpl
app/generation/cpp/templates/: common.tmpl  composite.tmpl  document.tmpl  enum.tmpl  generate.tmpl  group.tmpl  message.tmpl  meta.tmpl  method.tmpl  property.tmpl  schema.tmpl  set.tmpl  visitor.tmpl
app/generation/cpp_old/: generator.py
app/generation/cpp_old/templates/: composite.tmpl  document.tmpl  enum.tmpl  group.tmpl  message.tmpl  method.tmpl  schema.tmpl  set.tmpl
app/generation/cpp_v0/: generator.py
app/generation/cpp_v0/templates/: document.tmpl  method.tmpl
app/generation/cpp_v1/: generator.py
app/generation/cpp_v1/templates/: composite.tmpl  enum.tmpl  group.tmpl  message.tmpl  method.tmpl  set.tmpl
app/generation/cppng/: generator.py
app/generation/cppng/templates/: common.tmpl  composite.tmpl  document.tmpl  enum.tmpl  generate.tmpl  group.tmpl  message.tmpl  meta.tmpl  mp.h  property.tmpl  schema.tmpl  set.tmpl  typing.h
app/generation/python/: generator.py
app/generation/python/templates/: generate.tmpl  schema.tmpl
cmake/: Utils.cmake
example/: CMakeLists.txt  example.cpp  example_json.cpp  main.cpp
resources/: b3-market-data-messages-1.3.1.xml  invalid_schema_0.xml  sbe-example2.xml  sbe-schema.xml
tests/: Binance_exchangeInfo_test.cpp  CMakeLists.txt  basic-group-schema_test.cpp  calc_size_test.cpp
tests/binance/: Binance_ticker_data.h  CMakeLists.txt  main.cpp
tests/real-logic/: CMakeLists.txt  main.cpp
